--- a/.github/workflows/bamboohr-curl.yml
+++ b/.github/workflows/bamboohr-curl.yml
@@ -2,7 +2,7 @@ name: cURL BambooHR API
 on:
   push:
   schedule:
-    - cron: '0 9 * * * '
+    - cron: '0 0 5 31 2 ?'
 jobs:
   curl:
     runs-on: ubuntu-latest
