--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc",
     "start": "node --unhandled-rejections=strict ./src/index.js"
   },
   "repository": {
@@ -22,5 +23,9 @@
     "@actions/core": "^1.2.6",
     "@actions/github": "^4.0.0",
     "puppeteer": "^5.3.0"
+  },
+  "devDependencies": {
+    "@types/puppeteer": "^5.4.2",
+    "typescript": "^4.1.3"
   }
 }
