--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
-    "start": "npm run build; node --unhandled-rejections=strict ./src/index.js"
+    "start": "npm run build; node --unhandled-rejections=strict ./dist/index.js"
   },
   "repository": {
     "type": "git",
