--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node --unhandled-rejections=strict ./src/index.js"
+    "build": "tsc",
+    "start": "npm run build; node --unhandled-rejections=strict ./dist/index.js"
   },
   "repository": {
     "type": "git",
@@ -22,5 +23,9 @@
     "@actions/core": "^1.2.6",
     "@actions/github": "^4.0.0",
     "puppeteer": "^5.3.0"
+  },
+  "devDependencies": {
+    "@types/puppeteer": "^5.4.2",
+    "typescript": "^4.1.3"
   }
 }
