feat(github-action): run when PR is labeled with 'test-puppeteer'

--- a/.github/workflows/bamboohr-puppeteer.yml
+++ b/.github/workflows/bamboohr-puppeteer.yml
@@ -1,12 +1,12 @@
 name: BambooHR with Puppeteer
 on:
-  push:
-    branches:
-      - "test-*"
+  pull_request:
+    types: ['labeled']
   schedule:
     - cron: '0 8 * * 1-5'
 jobs:
   puppeteer:
+    if: contains(github.event.pull_request.labels.*.name, 'test-puppeteer')
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
