--- a/.github/workflows/bamboohr-puppeteer.yml
+++ b/.github/workflows/bamboohr-puppeteer.yml
@@ -4,6 +4,7 @@ on:
     types: ['labeled']
   schedule:
     - cron: '0 8 * * 1-5'
+    - cron: '30 18 * * 1-5'
 jobs:
   puppeteer:
     if: contains(github.event.pull_request.labels.*.name, 'test-puppeteer')
