--- a/.github/workflows/bamboohr-puppeteer.yml
+++ b/.github/workflows/bamboohr-puppeteer.yml
@@ -15,6 +15,12 @@ jobs:
         uses: ianwalter/puppeteer@v2.0.0
         with:
           args: yarn
+      - name: Lint Action
+        uses: wearerequired/lint-action@v1.7.0
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          eslint: true
+          prettier: true
       - name: Run Puppeteer
         uses: ianwalter/puppeteer@v2.0.0
         env:
