--- a/.github/workflows/bamboohr-puppeteer.yml
+++ b/.github/workflows/bamboohr-puppeteer.yml
@@ -15,6 +15,9 @@ jobs:
         uses: ianwalter/puppeteer@v2.0.0
         with:
           args: yarn
+      - name: Prettier
+        with:
+          args: yarn lint
       - name: Run Puppeteer
         uses: ianwalter/puppeteer@v2.0.0
         env:
