--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "devDependencies": {
     "@types/puppeteer": "^5.4.2",
+    "eslint": "^7.16.0",
     "prettier": "^2.2.1",
     "typescript": "^4.1.3"
   }
