--- a/.github/workflows/bamboohr-puppeteer.yml
+++ b/.github/workflows/bamboohr-puppeteer.yml
@@ -1,5 +1,8 @@
 name: BambooHR with Puppeteer
 on:
+  push:
+    branches-ignore: 
+    - main
   pull_request:
     types: ['labeled']
   schedule:
