--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
-    "lint": "eslint '*/**/*.{js,ts}' --quiet",
-    "lint:fix": "eslint '*/**/*.{js,ts}' --quiet --fix",
+    "lint": "eslint '*/**/*.{js,ts,json}' --quiet",
+    "lint:fix": "npm run lint -- --fix",
     "start": "npm run build; node --unhandled-rejections=strict ./dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
