--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "build": "tsc",
         "lint": "eslint '*/**/*.{js,ts,json}' --quiet",
         "lint:fix": "npm run lint -- --fix",
-        "start": "npm run build; node --unhandled-rejections=strict ./dist/index.js",
+        "start": "node --unhandled-rejections=strict ./dist/index.js",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "repository": {
